# crypto_trader

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Makefile  Pipfile  README.md  manage.py  pyproject.toml  scrapyd.conf
common/: items.py  order_book.py  utils.py
crawler/: items.py  pipelines.py  settings.py
crawler/spiders/: ticks.py
crypto_trader/: settings.py  urls.py  wsgi.py
enums/: market.py  symbol.py
exchange/: admin.py  models.py  tests.py
exchange/exchange_platform/: _base.py  huobi.py  kucoin.py  okex.py
exchange/migrations/: 0001_initial.py  0002_auto_20191220_0650.py  0003_tick.py  0004_delete_tick.py  0005_auto_20191220_0739.py  0006_auto_20191223_0540.py
exchange/platformx/: _base.py  fcoin.py
exchange/websocket_observable/: _base.py  kucoin.py
market/: admin.py  models.py  urls.py  views.py
market/management/commands/: crawl.py  crawl_orders.py  crawl_ticks.py
market/migrations/: 0001_initial.py  0002_order.py  0003_delete_order.py  0004_order.py  0005_auto_20191223_0613.py  0006_order_value.py  0007_auto_20191223_0628.py
market/templates/admin/market/tick/: change_list.html
templates/: article_detail.html  article_list.html  index.html  tag_detail.html  tag_list.html
templates/market/: analyze_response.html  index.html  order.html  order_report.html  trade.html  trade_report.html
